# llm-benchmarker-suite

./: .gitignore  .gitmodules  LICENSE.md  README.md  pyproject.toml  test.py
.github/workflows/: static.yml
data/AGIEval/: README.md
data/CLUE/DRCD/: test_public.json
data/FewCLUE/eprstmt/: dev_public.json
data/FewCLUE/tnews/: test_public.json
data/LCSTS/: test.src.txt  test.tgt.txt
data/SuperGLUE/AX-b/: AX-b.jsonl
data/SuperGLUE/AX-g/: AX-g.jsonl
data/SuperGLUE/BoolQ/: val.jsonl
data/SuperGLUE/WSC/: val.jsonl
data/SuperGLUE/WiC/: test.jsonl  val.jsonl
data/ceval/release_ceval/: readme.md
data/mbpp/: mbpp.jsonl
docs/metrics/: metrics.py  test.py
eval_levels/: __init__.py  example.py  generic_language_model.py  gpt_completions_api.py  huggingface_language_model.py  large_language_model.py  proprietary_language_model.py  test.py
llm_benchmarker_suite/: __init__.py  evaluator.py  ground_truth.json  llm_benchmarker.py  model_output.json  run_opencompass.py  sample_ground_truth.json  sample_model_output.json  test.py
llm_benchmarker_suite/examples/: llama.py
llm_benchmarker_suite/examples/evals/: lambada.ipynb
llm_benchmarker_suite/examples/opencompass/: falcon.py
metrics/: __init__.py  accuracy.py  bleu_score.py  f1_score.py  test.py  utils.py
static/: aboutus.html  concept.html  contactus.html  index.html  sample.csv  sample2.csv
tests/: config.yaml  test.py
